@@ -169,8 +169,10 @@ struct NotificationConfiguration
     bool park_rating_warnings;
     bool ride_broken_down;
     bool ride_crashed;
+    bool ride_casualties;
     bool ride_warnings;
     bool ride_researched;
+    bool ride_stalled_vehicles;
     bool guest_warnings;
     bool guest_lost;
     bool guest_left_park;
